--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "redfour",
   "version": "1.0.5",
   "description": "A redis binary semaphore with async wait",
+  "engines": {
+    "node": ">=7.6.0"
+  },
   "main": "src/index.js",
   "scripts": {
     "ci": "npm run lint && npm test",
@@ -33,6 +36,7 @@
   },
   "dependencies": {
     "node-redis-scripty": "^0.0.5",
+    "promise-callbacks": "^3.1.0",
     "redis": "^2.6.2"
   }
 }
